# laxy

./: .dockerignore  .env.example  .env_example  .gitignore  .gitmodules  AUTHORS  CHANGELOG.md  DEPENDENCY_UPGRADE_PLAN.md  Dockerfile  FEATURES_TO_TEST.md  README.md  compose.sh  conftest.py  docker-compose.dev.yml  docker-compose.local-dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  justfile  manage.py  pytest.ini  requirements-dev.txt  requirements-thawed.txt  requirements.txt  test.sh  tslint.json
.github/: dependabot.yml
.github/workflows/: dockerpush.yml  dockerpush_laxydl.yml  dockerpush_sslcerts.yml
docker/fake-cluster/: Dockerfile  fixtures.json  id_rsa  id_rsa.pub  nextflow.config  sik.config  slurm.conf
docker/laxy/: Dockerfile
docker/laxy-static-nginx/: Dockerfile  nginx.conf.template
docker/laxy-test/: Dockerfile
docker/laxy_downloader/: Dockerfile
docker/ssl-certs/: Dockerfile  update-ssl-cert.sh
docs/: admin.md  development.md  docker.md  job-sequence-diagram.txt  laxy-pipelines.md  non-docker-development.md  restful_api.md
laxy/: auth_backends.py  celery.py  default_settings.py  openapi.py  openapi_renderers.py  openapi_yaml.py  test_settings.py  urls.py  utils.py  wsgi.py
laxy.bak/: default_settings.py  urls.py
laxy/tests/: test_util.py
laxy_backend/: admin.py  apps.py  bcbio.py  cfncluster.py  ena.py  filesender.py  filters.py  http_range.py  igv_session.py  jwt_helpers.py  models.py  paramiko_monkeypatch.py  permissions.py  scraping.py  serializers.py  tasks.py  urls.py  util.py  view_auth.py  view_event.py  view_mixins.py  views.py
laxy_backend/auth/: pipeline.py  pipeline_migration.py
laxy_backend/migrations/: 0001_initial.py  0001_squashed_0004_auto_20180921_0320.py  0002_auto_20190122_0553.py  0002_userprofile_avatar_url.py  0003_auto_20180921_0310.py  0003_auto_20190212_0000.py  0004_auto_20180921_0320.py  0004_file_deleted_time.py  0005_auto_20190212_0512.py  0006_sampleset_job.py  0007_auto_20190805_0451.py  0008_auto_20190903_0019.py  0009_job_params_sampleset_to_cart.py  0010_job_metadata.py  0011_auto_20191029_0526.py  0011_auto_20191105_0248.py  0011_auto_20191105_0248_longer_profile_image_url.py  0012_populate_new_filelocation_model.py  0013_remove_file__location.py  0014_remove_job_secret.py  0015_computeresource_priority.py  0016_auto_20191121_0205.py  0017_auto_20200330_0004.py  0018_pipeline.py  0019_pipeline_public.py  0020_pipeline_metadata.py  0021_auto_20201012_0443.py  0022_systemstatus.py  (+6 more)
laxy_downloader/: README.md  pyproject.toml  pytest.ini  setup.py
laxy_downloader/downloader/: __init__.py  aria.py  cli.py  downloader.py  secrets.py
laxy_downloader/downloader/tests/: test_pipeline_config.py
laxy_downloader/downloader/tests/test_data/: pipeline_config.json  pipeline_config2.json  pipeline_config_dupe_urls.json
laxy_downloader/laxy_downloader/: aria.py  cli.py  core.py  downloader.py  pymmh3.py
laxy_downloader/laxy_downloader/tests/: test_cache.py  test_cli_expire_cache.py  test_core.py  test_downloader.py  test_pipeline_config.py
laxy_downloader/laxy_downloader/tests/test_data/: pipeline_config2_sane.json  pipeline_config_dupe_urls.json  pipeline_config_smaller.json
laxy_frontend/: index.html  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
laxy_genomes/: apps.py  serializers.py  urls.py  views.py
laxycli/: README.md  laxycli.py
plans/: http-range-requests.plan.md
scripts/: get_igenomes_json.groovy  igenomes_list.py
templates/: base.html
tests/: test_detect_annotation_style.py
(+334 files in other folders)
